--- a/WebApplication4/WebApplication4/Views/Evento/BusquedaPaging.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/BusquedaPaging.cshtml
@@ -5,30 +5,46 @@
 @model IPagedList<Eventos>
 @{
     ViewBag.Title = "BusquedaPaging";
-    Layout = "~/Views/Shared/_LayoutPersonal.cshtml";
+    Layout = null;
+    //Layout = "~/Views/Shared/_LayoutPersonal.cshtml";
 }
 
+<div class="container-fluid">
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+            <strong>Resultados: @Model.TotalItemCount </strong>
+        </div>
+
+        <!--Aca iran los eventos en miniatura-->
+        <div class="panel-body">
+
+            @foreach (var evento in Model)
+            {
+
+                <div class="col-md-2 col-sm-4 col-xs-6">
+                    <div class="thumbnail">
+                        <img onclick="verEvento()" class="event" src="@evento.ImagenDestacado" alt="">
+                        <div class="caption" style="text-align:center">
+                            <div class="row">@evento.nombre</div>
+                            <div class="row">@evento.fecha_inicio</div>
+                        </div>
+                    </div>
+                </div>
 
 
-    <div class="container">
-        <h1>@ViewBag.Title</h1>
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th>Product name</th>
-                    <th>Category</th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var product in Model)
-                {
+                @*
+
                     <tr>
-                        <td>@product.nombre</td>
-                        <td>@product.lugar</td>
+                        <td>@evento.nombre</td>
+                        <td>@evento.lugar</td>
                     </tr>
-                }
-            </tbody>
-        </table>
+                *@
+            }
+        </div>
+
+
+        <!--Paginacion-->
+
         @Html.Pager(Model.PageSize, Model.PageNumber, Model.TotalItemCount).Options(o => o
             .DisplayTemplate("Bootstrap3Pagination")
             .MaxNrOfPages(14)
@@ -36,4 +52,5 @@
         )
 
     </div>
-    <!-- /container -->
+</div>
+
