--- a/WebApplication4/WebApplication4/Views/Shared/DisplayTemplates/Bootstrap3Pagination.cshtml
+++ b/WebApplication4/WebApplication4/Views/Shared/DisplayTemplates/Bootstrap3Pagination.cshtml
@@ -1,6 +1,6 @@
 ﻿@using MvcPaging;
 @model PaginationModel
-<ul class="pagination">
+<ul class="pagination pull-right">
     @foreach (var link in Model.PaginationLinks)
     {
         @BuildLink(link)
