--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/BuscaCliente.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/BuscaCliente.cshtml
@@ -19,14 +19,14 @@
 
 <div class="container">
     <div class="row ">
-        @*<div class="col-md-1">
+        <div class="col-md-1">
                 <label for="dni" class="control-label">Tipo Doc:</label>
             </div>
             <div class="col-md-2">
-                <select class="form-control" name="" id="">
-                    <option value="">DNI</option>
-                    <option value="">Pasaporte</option>
-                    <option value="">Carnet Extranjería</option>
+                <select class="form-control" name="" id="comboBusq">
+                    <option value="0">Tipo</option>
+                    <option value="1">DNI</option>
+                    <option value="2">Pasaporte</option>
                 </select>
             </div>
             <div class="col-md-2">
@@ -34,11 +34,11 @@
             </div>
             <div class="col-md-2">
                 <div class="input-group">
-                    <input id="dni" type="text" class="form-control">
-                    <span class="input-group-btn"><button class="btn btn-primary" type="button"><span class="glyphicon glyphicon-search"></span></button></span>
+                    <input id="idBusq" type="text" class="form-control">
+                    <span class="input-group-btn"><button onclick="busca()" class="btn btn-primary" type="button"><span class="glyphicon glyphicon-search"></span></button></span>
                 </div>
             </div>
-            <div class="col-md-2">
+            @*<div class="col-md-2">
                 <div class="input-group">
                     <a class="btn btn-primary" href="#regalo" data-toggle="modal"><span class="glyphicon glyphicon-gift"></span> Entregar Regalo</a>
                 </div>
@@ -54,7 +54,7 @@
 
     </div>
     <br>
-    @using (Html.BeginForm("Search", "CuentaUsuario", FormMethod.Post, new { }))
+    @*@using (Html.BeginForm("Search", "CuentaUsuario", FormMethod.Post, new { }))
     {
         @Html.AntiForgeryToken()
 
@@ -96,14 +96,14 @@
                 </div>
             </div>
         </div>
-    }
+    }*@
 
     @{
         var db = new WebApplication4.Models.inf245netsoft();
         List<WebApplication4.Models.CuentaUsuario> listaCliente = null;
-        if (TempData["ListaCL"] != null)
+        if (Session["ListaCL"] != null)
         {
-            listaCliente = (List<WebApplication4.Models.CuentaUsuario>)TempData["ListaCL"];
+            listaCliente = (List<WebApplication4.Models.CuentaUsuario>)Session["ListaCL"];
         }
         else
         {
@@ -161,24 +161,51 @@
         //<a class="btn btn-primary" href="javascript:document.getElementsByClassName('trselected').submit()">Borrar<span class="glyphicon glyphicon-pencil"></span></a>
         //idProm = x.codp;
     }
+    function busca() {
+        var usuario = $('#idBusq').val();
+        var tipo = $('#comboBusq option:selected').val();
+        //var el = document.getElementById(regalo);
+        //var row = $(el).closest('tr');
+        //alert(evento);
+        //alert(promocion);
+        //if (usuario != "" && tipo != "" && usuario != null && tipo != null) {
+            $.ajax({
+                url: "@Url.Action("Search2", "CuentaUsuario")",
+                data: { usuario:usuario, tipo:tipo },
+                success: function (data) {
+                    window.location.href = '/CuentaUsuario/BuscaCliente';
+                    //alert("Eliminado");
+                    //row.remove();
+                },
+                error: function () {
+                    alert("Error :(");
+                }
+            });
+        //} else {
+        //    alert("Ingrese todos los campos de busqueda");
+        //}
+    }
     function selecciona() {
         var cliente = $('#idClienteT').val();
         //var el = document.getElementById(regalo);
         //var row = $(el).closest('tr');
         //alert(evento);
         //alert(promocion);
-        $.ajax({
-            url: "@Url.Action("Entrega2", "CuentaUsuario")",
-            data: { cliente: cliente },
-            success: function (data) {
+            $.ajax({
+                url: "@Url.Action("Entrega2", "CuentaUsuario")",
+                data: { cliente: cliente },
+                success: function (data) {
 
-                //alert("Eliminado");
-                //row.remove();
-            },
-            error: function () {
-                alert("Error :(");
-            }
-        });
+                    //alert("Eliminado");
+                    //row.remove();
+                },
+                error: function () {
+                    alert("Error :(");
+                }
+            }); 
+    }
+    function closewindow() {
+        $('#regalo').modal('hide');
     }
 </script>
 
@@ -207,7 +234,7 @@
             <!--footer de la ventana-->
             <div class="modal-footer">
                 <button type="button" onclick="entregar()" class="btn btn-primary">Entregar <span class="glyphicon glyphicon-ok"></span></button>
-                <button type="button" onclick="cerrarModal()" class="btn btn-danger">Cancelar <span class="glyphicon glyphicon-remove"></span></button>
+                <button type="button" onclick="closewindow()" class="btn btn-danger">Cancelar <span class="glyphicon glyphicon-remove"></span></button>
             </div>
         </div>
     </div>
