--- a/WebApplication4/WebApplication4/Views/Evento/Register.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/Register.cshtml
@@ -1,4 +1,4 @@
-ï»¿@using Microsoft.AspNet.Identity;
+@using Microsoft.AspNet.Identity;
 @using WebApplication4.Models;
 
 @model EventoModel
@@ -27,19 +27,19 @@
         @Html.AntiForgeryToken()
         @Html.ValidationSummary(true)
 
-        <!--DECLARAMOS EL TABS Y LA CANTIDAD DE PESTAÃ‘AS QUE TENDRA -->
+        <!--DECLARAMOS EL TABS Y LA CANTIDAD DE PESTAÑAS QUE TENDRA -->
         <ul class="nav nav-tabs">
             <li id="tab_1" class="active"><a href="#generales" data-toggle="tab">Datos Generales</a></li>
             <li id="tab_2"><a href="#bloques_tiempo" data-toggle="tab">Bloques de tiempo de venta</a></li>
             <li id="tab_3"><a href="#funciones" data-toggle="tab">Funciones</a></li>
-            <li id="tab_4"><a href="#tarifas" data-toggle="tab" onclick="generaTablaTarifas()">Tarifas</a></li>
+            <li id="tab_4"><a href="#tarifas" data-toggle="tab">Tarifas</a></li>
             <li id="tab_6"><a href="#extras" data-toggle="tab">Extras</a></li>
         </ul>
 
 
-        <!--INTRODUCIMOS EL CONTIDO QUE TENDRA CADA PESTAÃ‘A -->
+        <!--INTRODUCIMOS EL CONTIDO QUE TENDRA CADA PESTAÑA -->
         <div class="tab-content">
-            <!--PRIMERA PESTAÃ‘A-->
+            <!--PRIMERA PESTAÑA-->
             <div class="tab-pane active  fade in  container" id="generales">
                 <br>
                 <div class="form-horizontal">
@@ -84,7 +84,7 @@
                         </div>
                     </div><br><br>
                     <div class="form-group">
-                        <label for="nombre" class="control-label col-md-2">DirecciÃ³n:</label>
+                        <label for="nombre" class="control-label col-md-2">Dirección:</label>
                         <div class="col-md-10">
                             <input type="text" class="form-control" id="nombre" placeholder="Solo si no existe local para el evento">
                         </div>
@@ -100,19 +100,19 @@
                         </div>
                     </div><br><br>
                     <div class="form-group">
-                        <label for="descripcion" class="control-label col-md-2">DescripciÃ³n:</label>
+                        <label for="descripcion" class="control-label col-md-2">Descripción:</label>
                         <div class="col-md-10">
                             <textarea class="form-control " rows="8" id="descripcion"></textarea>
                         </div>
                     </div>
                 </div>
             </div><br /><br />
-            <!--SEGUNDA PESTAÃ‘A-->
+            <!--SEGUNDA PESTAÑA-->
             <div class="tab-pane fade in container" id="bloques_tiempo">
                 <br>
                 <div class="col-md-4">
                     <div class="form-group">
-                        <button id="btnAgregarBloque" type="button" class="btn btn-primary" onclick="nuevoBloque()">AÃ±adir bloque <span class="glyphicon glyphicon-plus"></span></button>
+                        <button id="btnAgregarBloque" type="button" class="btn btn-primary" onclick="nuevoBloque()">Añadir bloque <span class="glyphicon glyphicon-plus"></span></button>
                         <button id="btnQuitarBloque" type="button" class="btn btn-primary" onclick="quitarBloque()">Quitar bloque <span class="glyphicon glyphicon-remove"></span></button>
                     </div>
                 </div>
@@ -127,26 +127,26 @@
                             <tr class="thead">
                                 <td>Desde: </td>
                                 <td>Hasta: </td>
-                                <td>Â¿Quitar?</td>
+                                <td>¿Quitar?</td>
                             </tr>
                         </tshead>
                         <tbody></tbody>
                     </table><br>
                 </div>
             </div>
-            <!--TERCERA PESTAÃ‘A-->
+            <!--TERCERA PESTAÑA-->
             
             <div class="tab-pane fade in container" id="funciones">
                 @Html.Hidden("histFuncion", "0")
                 <br>
                 <div>
-                    <button id="btnAgregarFuncion" type="button" class="btn btn-primary" onclick="agregaFuncion()">Agregar funciÃ³n <span class="glyphicon glyphicon-plus"></span></button>
-                    <button id="btnAgregarFuncion" type="button" class="btn btn-primary" onclick="eliminarFuncion()">Quitar funciÃ³n <span class="glyphicon glyphicon-remove"></span></button>
+                    <button id="btnAgregarFuncion" type="button" class="btn btn-primary" onclick="agregaFuncion()">Agregar función <span class="glyphicon glyphicon-plus"></span></button>
+                    <button id="btnAgregarFuncion" type="button" class="btn btn-primary" onclick="eliminarFuncion()">Quitar función <span class="glyphicon glyphicon-remove"></span></button>
                 </div><br /><br />
                 <div id="funciones" class="container">
                 </div>
             </div>
-            <!--CUARTA PESTAÃ‘A-->
+            <!--CUARTA PESTAÑA-->
             <div class="tab-pane fade in container" id="tarifas">
                 <div class="container">
                     <br>
@@ -160,23 +160,25 @@
                         <table class="table table-bordered table-hover" id="tarifaTabla">
                             <thsead>
                                 <tr class="thead">
-                                    <th>NÂº</th>
+                                    <th>Nº</th>
                                     <th>Tipo de entrada/Zona</th>
                                 </tr>
                             </thsead>
-                            <tbody></tbody>
+                            <tbody contenteditable="true">
+
+                            </tbody>
                         </table>
                     </div>
                 </div>
             </div>
-            <!--QUINTA PESTAÃ‘A no existe, asientos tiene su propia vista-->
-            <!--SEXTA PESTAÃ‘A-->
+            <!--QUINTA PESTAÑA no existe, asientos tiene su propia vista-->
+            <!--SEXTA PESTAÑA-->
             <div class="tab-pane fade in container" id="extras">
                 <div class="container">
                     <br>
                     <div class="row">
                         <div class="form-group">
-                            <label for="nombre" class="control-label col-md-2">MÃ¡ximo de reservas/ventas permitidas:</label>
+                            <label for="nombre" class="control-label col-md-2">Máximo de reservas/ventas permitidas:</label>
                             <div class="col-md-2">
                                 <input type="number" class="form-control" id="nombre">
                             </div>
@@ -214,7 +216,7 @@
                     </div>
                     <div class="row">
                         <div class="form-group">
-                            <label for="nombre" class="control-label col-md-2">Penalidad por cancelaciÃ³n: </label>
+                            <label for="nombre" class="control-label col-md-2">Penalidad por cancelación: </label>
                             <div class="col-md-2">
                                 <div class="input-group">
                                     <span class="input-group-addon" id="cancelar">S/.</span>
@@ -225,7 +227,7 @@
                     </div>
                     <div class="row">
                         <div class="form-group">
-                            <label for="nombre" class="control-label col-md-2">Penalidad por postergaciÃ³n: </label>
+                            <label for="nombre" class="control-label col-md-2">Penalidad por postergación: </label>
                             <div class="col-md-2">
                                 <div class="input-group">
                                     <span class="input-group-addon" id="postergar">S/.</span>
@@ -265,10 +267,10 @@
                     <div class="row">
                         <div class="col-md-4 col-md-offset-2">
                             <div class="checkbox">
-                                <label><input type="checkbox" value="">Permitir reservas vÃ­a web</label>
+                                <label><input type="checkbox" value="">Permitir reservas vía web</label>
                             </div>
                             <div class="checkbox">
-                                <label><input type="checkbox" value="">Permitir boleto electrÃ³nico</label>
+                                <label><input type="checkbox" value="">Permitir boleto electrónico</label>
                             </div>
                         </div>
                     </div>
@@ -368,7 +370,6 @@
             </div>
         </div>
     </div>
-    <input name="plox" id="plox" />
     <script>
         function cambioDepartamento() {
             var depId = parseInt($("#idRegion").val());
