--- a/WebApplication4/WebApplication4/Views/Home/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/Home/Index.cshtml
@@ -2,7 +2,8 @@
 @using WebApplication4.Models;
 
 @{
-    ViewBag.Title = "TickNet";    
+    ViewBag.Title = "TickNet";
+    List<Eventos> listaDestacados = ViewBag.ListaDestacados as List<Eventos>;
 }
 
 <html>
@@ -11,10 +12,6 @@
         <div class="row">
             <div class="col-md-12 ">
                 <div id="carousel-1" class="carousel slide" data-ride="carousel">
-                    @{
-                        var db = new WebApplication4.Models.inf245netsoft();
-                        List<Eventos> listaDestacados = db.Eventos.AsNoTracking().Where(c => (c.ImagenDestacado != null)).ToList();
-                    }
                     <!--indicadores primero-->
                     <ol class="carousel-indicators">
                         @for (var i = 0; i < listaDestacados.Count; i++ )
